<resources>
    <string name="app_name">ProyectoABP Traductor</string>
    <string name="tv_texto_traducir">Introduce el texto que quieres traducir</string>
    <string name="btn_enviar">Enviar</string>
    <string name="modo_noche">Modo noche</string>
    <string name="idioma_ingles">Inglés</string>
    <string name="idioma_italiano">Italiano</string>
    <string name="idioma_chino">Chino</string>
    <string name="idioma_HUNGARO">Húngaro</string>
    <string name="tv_seleccionar_idiomas">Selecciona los idiomas a los que quieras traducir el texto</string>
    <string name="resultado_de_la_traducci_n">Resultado de la traducción</string>
    <string-array name="idiomas_aplicacion">
        <item>Español</item>
        <item>Francés</item>
        <item>Inglés</item>
    </string-array>
</resources>